<resources>
    <string name="app_name">QuizApp</string>
    <string name="highscore">highscore: 0</string>
    <string name="start_btn_text">Start</string>
    <string name="btn_confirm_text">confirm</string>
    <string name="question_text">место для вопроса</string>
    <string name="time_text">00:30</string>
    <string name="question_1_x">question: 1/x</string>
    <string name="score_0">score: 0</string>
</resources>
