<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:padding="@dimen/margin"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/tv_qustions_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/question_1_x"
        android:layout_below="@id/tv_score"/>
    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/time_text"
        android:textSize="@dimen/btn_text_size"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/question_text"
        android:layout_above="@id/radio_group"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/rb_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="description"/>
        <RadioButton
            android:id="@+id/rb_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="description"/>
        <RadioButton
            android:id="@+id/rb_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="description"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_confirm_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size"
        android:layout_margin="@dimen/margin"
        android:layout_below="@id/radio_group"/>


</RelativeLayout>